# thumb-flow

./: .gitignore  GRADLE_BUILD.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: CODEOWNERS
src/lambda/thumbnail_generator/: Dockerfile  pyproject.toml
src/lambda/thumbnail_generator/src/dev_blumek_thumbnail_generator/bootstrap/: application_bootstrap.py  handler.py
src/lambda/thumbnail_generator/test/: __init__.py  test_placeholder.py
src/lambda/upload_handler/: Dockerfile  Makefile  README.md  app.py  application_bootstrap.py  build.gradle.kts  handler.py  image_extension.py  image_persistence_gateway.py  image_persistence_gateway_model.py  image_policy.py  image_repository.py  image_repository_model.py  image_upload_use_case.py  image_upload_use_case_model.py  pyproject.toml  requirements.txt
src/lambda/upload_handler/application/use_case/: image_upload_use_case.py  image_upload_use_case_model.py
src/lambda/upload_handler/domain/types/: image_extension.py
src/lambda/upload_handler/infrastructure/gateway/: image_persistence_gateway_model.py
src/lambda/upload_handler/infrastructure/repository/: image_repository_model.py
src/lambda/upload_handler/src/: application_bootstrap.py  handler.py
src/lambda/upload_handler/src/application/use_case/: image_upload_service.py  image_upload_use_case.py  image_upload_use_case_model.py
src/lambda/upload_handler/src/dev_blumek_upload_handler/: application_bootstrap.py  handler.py
src/lambda/upload_handler/src/domain/types/: image_extension.py
src/lambda/upload_handler/src/infrastructure/factory/: image_key_factory.py  key_factory.py  unique_image_key_factory.py
src/lambda/upload_handler/src/infrastructure/gateway/: image_persistence_gateway.py  image_persistence_gateway_model.py  s3_image_persistence_gateway.py
src/lambda/upload_handler/src/infrastructure/policy/: composite_image_policy.py  extension_image_policy.py  image_policy.py  size_image_policy.py
src/lambda/upload_handler/src/infrastructure/repository/: image_repository.py  image_repository_model.py  in_memory_image_repository.py  s3_image_repository.py
src/lambda/upload_handler/test/application/use_case/: test_image_upload_use_case.py
src/lambda/upload_handler/test/domain/types/: test_image_extension.py
src/lambda/upload_handler/test/infrastructure/factory/: test_unique_image_key_factory.py
src/lambda/upload_handler/test/infrastructure/gateway/: test_s3_image_persistence_gateway.py
src/lambda/upload_handler/test/integration/: test_image_upload_integration.py
(+77 files in other folders)
