[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thumbnail-generator"
version = "0.1.0"
description = "AWS Lambda function for thumbnail generation"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Szymon Blumczynski" }
]
dependencies = [
    "boto3>=1.39.4",
    "aws-lambda-typing>=2.20.0",
    "pillow>=10.0.0",
    "mypy_boto3_bedrock_runtime>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "bandit",
    "boto3-stubs[essential]",
    "parameterized",
    "moto",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "*__init__.py",
]
data_file = "build/reports/coverage/.coverage"

[tool.coverage.html]
directory = "build/reports/coverage/html"

[tool.coverage.xml]
output = "build/reports/coverage/coverage.xml"
