[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upload-handler"
version = "0.1.0"
description = "AWS Lambda function for handling image uploads"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
    {name = "Szymon Blumczynski"}
]
dependencies = [
    "boto3>=1.39.4",
    "aws-lambda-typing>=2.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "boto3-stubs[essential]",
    "parameterized",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "*__init__.py",
    "src/application_bootstrap.py",
    "src/infrastructure/repository/in_memory_image_repository.py",
]
